annimate_core/tests/snapshots/project__migrate_from_v1.snap
---
source: annimate_core/tests/project.rs
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
corpus-set = "Test Corpus Set"
corpora = [
    "Test Corpus 1",
    "Test Corpus 2",
]
query = "Test AQL query"
query-language = "aql-compatibility"
export-format = "xlsx"

[[project.columns]]
type = "number"

[[project.columns]]
type = "corpus-metadata"
annotation = { ns = "ns1", name = "anno1" }

[[project.columns]]
type = "document-metadata"
annotation = { ns = "ns2", name = "anno2" }

[[project.columns]]
type = "match-annotation"
annotation = { ns = "ns3", name = "anno3" }
node-index = 0

[[project.columns]]
type = "match-in-context"
segmentation = "Test Segmentation"
annotation = "default"
context = { left = 5, right = 10 }
primary-node-indices = [1, 2, 3]
