annimate_core/tests/snapshots/project__with_aql_query.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: Test AQL query
  query_language: AQL
  export_columns: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query = "Test AQL query"
query-language = "aql"
export-format = "csv"
