annimate_core/tests/snapshots/project__with_corpus_set.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: Test Corpus Set
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
corpus-set = "Test Corpus Set"
query-language = "aql"
export-format = "csv"
