annimate_core/tests/snapshots/project__with_export_columns_with_default_anno.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns:
    - MatchInContext:
        segmentation: ~
        anno_key: Default
        context:
          Symmetric: 20
        primary_node_indices: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql"
export-format = "csv"

[[project.columns]]
type = "match-in-context"
annotation = "default"
context = 20
