annimate_core/tests/snapshots/project__with_export_columns_with_edge_type.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns:
    - AnnoEdge:
        edge_type:
          - Dominance
          - ""
        anno_key: ~
        source_node_index: ~
        target_node_index: ~
    - AnnoEdge:
        edge_type:
          - Dominance
          - comp1
        anno_key: ~
        source_node_index: ~
        target_node_index: ~
    - AnnoEdge:
        edge_type:
          - Pointing
          - comp2
        anno_key: ~
        source_node_index: ~
        target_node_index: ~
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql"
export-format = "csv"

[[project.columns]]
type = "edge-annotation"
edge-type = { ctype = "Dominance", name = "" }

[[project.columns]]
type = "edge-annotation"
edge-type = { ctype = "Dominance", name = "comp1" }

[[project.columns]]
type = "edge-annotation"
edge-type = { ctype = "Pointing", name = "comp2" }
