annimate_core/tests/snapshots/project__with_one_corpus_name.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names:
    - Test Corpus 1
  aql_query: ""
  query_language: AQL
  export_columns: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 1

[project]
corpora = ["Test Corpus 1"]
query-language = "aql"
export-format = "csv"
