annimate_core/tests/snapshots/project__with_query_language_aql_quirks_v3.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQLQuirksV3
  export_columns: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql-compatibility"
export-format = "csv"
